--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,9 +1,5 @@
-spring.application.name = department-service
-server.port=8081
-
-departmentCode=1234
-departmentManager=adarsh
-departmentStatus=true
+spring.application.name = employee-service
+server.port=9091
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -16,3 +12,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
+
